--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@
 AC_PREREQ([2.59])
 AC_INIT(enerepr, 0.0.0, Matubayasi Laboratory)
 AM_INIT_AUTOMAKE([foreign])
-AC_CONFIG_MACRO_DIR(.)
+AC_CONFIG_MACRO_DIR(m4)
 
 # Checks for programs.
 AC_PROG_CPP
