--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 
 AC_PREREQ([2.59])
 #AC_INIT(enerepr, 0.0.%rev%, Matubayasi Laboratory)
-AC_INIT(enerepr, 0.0.52, Matubayasi Laboratory)
+AC_INIT(enerepr, 0.0.53, Matubayasi Laboratory)
 AM_INIT_AUTOMAKE([foreign])
 AC_CONFIG_MACRO_DIR(m4)
 
@@ -166,6 +166,46 @@ AS_IF([test "x$use_mpi = xyes"],
 	    [mpi_result="disabled"
 	     FFLAGS="$FFLAGS -Dno_MPI"
 	     FCFLAGS="$FCFLAGS -Dno_MPI"])
+
+# optimization flags
+AC_DEFUN([MY_FC_OPT_ACCEPT_NATIVE],[
+AC_CACHE_CHECK([fortran compiler accepts -march=native],
+my_fc_opt_accept_native_cv_flag,
+[AC_LANG_PUSH(Fortran)
+save_FCFLAGS=$FCFLAGS
+flag="-march=native"
+FCFLAGS="$save_FCFLAGS $flag"
+AC_COMPILE_IFELSE([      program main
+      end program], [my_fc_opt_accept_native=yes], [my_fc_opt_accept_native=no])
+echo -n $my_fc_opt_accept_native
+FCFLAGS=$save_FCFLAGS
+AC_LANG_POP(Fortran)
+])])
+
+AC_ARG_ENABLE([opt],
+	AS_HELP_STRING([--disable-opt],
+		[disable automatic edit to optimization flags]))
+
+AS_IF([test x$ac_compiler_gnu = xyes],
+      [MY_FC_OPT_ACCEPT_NATIVE
+       AS_IF([test x$my_fc_opt_accept_native = xyes],
+             FCFLAGS="$FCFLAGS -march=native"
+             FFLAGS="$FFLAGS -march=native")])
+
+AS_IF([test x$enable_opt = xyes || test x$enable_opt = x],
+  [FFLAGS="$FFLAGS"
+   FCFLAGS="$FCFLAGS"
+   case x$F77 in #(
+     xmpiifort|xifort)
+       optflag="-O3 -no-proc-div -xHost"
+     ;; #(
+     *)
+       optflag="-O"
+     ;;
+   esac
+   FFLAGS="$FFLAGS $optflag"
+   FCFLAGS="$FCFLAGS $optflag"])
+
 # AM_CONDITIONAL([MPI], [test x$use_mpi = xyes])
 
 case "x$with_fft" in #(
