Fixed problem that fftw3 is not linked (why it has been worked?)

--- a/configure.ac
+++ b/configure.ac
@@ -229,6 +229,7 @@ case "x$with_fft" in #(
  xfftw) :
  FFLAGS="$FFLAGS -DFFTW"
  FCFLAGS="$FCFLAGS -DFFTW"
+ LDFLAGS="$LDFLAGS -lfftw3"
  ;; #(
  xmkl) :
  FFLAGS="$FFLAGS -DMKL"
