Fixed linking library Fixed unnecessarily large handler size Fixed for intel ifort ver 11.1 Updated gromacs script to only link the file for HISTORY file
--HG--
branch : gromacs-io

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,7 @@ extra_flags =
 if USE_LIBMD
 ermod_gromacs_SOURCES += gromacsfio.c
 extra_flags += -DMDLIB
-ermod_gromacs_LDADD += -lmd
+ermod_gromacs_LDADD += -lgmx -lmd -lm
 endif
 
 # extra dependencies added
