Added CFLAGS modification to -enable-perf option
--HG--
branch : gromacs-io

--- a/configure.ac
+++ b/configure.ac
@@ -186,8 +186,9 @@ AC_ARG_ENABLE([perf],
 	AS_HELP_STRING([--enable-perf],
 		[(internal use only)]),
 	AS_IF([test x$enable_perf = xyes],
-		     [FFLAGS="$FFLAGS -DPERF"
-	              FCFLAGS="$FCFLAGS -DPERF"
+		     [FFLAGS="$FFLAGS -fno-omit-frame-pointer -DPERF"
+	              FCFLAGS="$FCFLAGS -fno-omit-frame-pointer -DPERF"
+                      CCFLAGS="$CCFLAGS -fno-omit-frame-pointer"
                       LDFLAGS="$LDFLAGS -lprofiler"]))
 
 AS_IF([test "x$use_mpi" = "xyes"],
