--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 bin_PROGRAMS = ermod_gromacs ermod_namd ermod_charmm ermod_auto slvfe
 
-pkglibexec_DATA = vmdplugins/libexec/*.so
+dist_pkglibexec_SCRIPTS = vmdplugins/libexec/*.so
 
 ersources = engmain.f90 realcal_blk.f90 spline.f90 fft_iface.f90
 EXTRA_DIST = enganal.f insertion.f setconf.f stranal.f param_eng parameters_er.example gromacsfio.c
