VMD fio plugin now passes compilation
--HG--
branch : ver01

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4
 
-bin_PROGRAMS = ermod_gromacs ermod_namd ermod_auto slvfe
+bin_PROGRAMS = ermod_gromacs ermod_namd slvfe
 
 dist_pkglibexec_SCRIPTS = vmdplugins/libexec/*.so
 
@@ -10,35 +10,21 @@ EXTRA_DIST += tools/NAMD/*
 EXTRA_DIST += tools/gromacs/*
 EXTRA_DIST += vmdplugins/*.C vmdplugins/*.c vmdplugins/*.h vmdplugins/*.cxx vmdplugins/*.hxx vmdplugins/Makefile vmdplugins/LICENSE
 
-ermod_gromacs_SOURCES = $(ersources)
-ermod_gromacs_LDADD = ermod_gromacs-enganal.$(OBJEXT) $(LAPACK_LIBS) $(BLAS_LIBS) $(MPILIBS)
+ermod_gromacs_SOURCES = $(ersources) vmdfio.c
+ermod_gromacs_CFLAGS = -DINSTALL_PLUGIN_PATH=\"$(pkglibexecdir)\"
+ermod_gromacs_LDADD = ermod_gromacs-enganal.$(OBJEXT) $(LAPACK_LIBS) $(BLAS_LIBS) $(MPILIBS) -ldl -lm
 
 extra_flags = 
 
-if USE_LIBGMX
-ermod_gromacs_SOURCES += gromacsfio.c
-extra_flags += -DMDLIB
-ermod_gromacs_LDADD += -lgmx -lm
-endif
-
-
 # extra dependencies added
 ermod_gromacs-enganal.$(OBJEXT): enganal.f insertion.f setconf.f stranal.f param_eng
-	$(F77) $(AM_FFLAGS) $(FFLAGS) -DGROMACS $(extra_flags) -c -o $@ $<
+	$(F77) $(AM_FFLAGS) $(FFLAGS) -DGROMACS -DVMDPLUGINS $(extra_flags) -c -o $@ $<
 
 ermod_namd_SOURCES = $(ersources)
 ermod_namd_LDADD = ermod_namd-enganal.$(OBJEXT) $(LAPACK_LIBS) $(BLAS_LIBS) $(MPILIBS)
 
 ermod_namd-enganal.$(OBJEXT): enganal.f insertion.f setconf.f stranal.f param_eng
 	$(F77) $(AM_FFLAGS) $(FFLAGS) -DNAMD -c -o $@ $<
-
-# auto == vmdpluginfio
-ermod_auto_SOURCES = $(ersources) vmdfio.c 
-ermod_auto_CFLAGS = -DINSTALL_PLUGIN_PATH=\"$(pkglibexecdir)\"
-ermod_auto_LDADD = ermod_auto-enganal.$(OBJEXT) $(LAPACK_LIBS) $(BLAS_LIBS) -ldl -lm
-
-ermod_auto-enganal.$(OBJEXT): enganal.f insertion.f setconf.f stranal.f param_eng
-	$(F77) $(AM_FFLAGS) $(FFLAGS) -DVMDPLUGINS -c -o $@ $<
 
 
 slvfe_SOURCES = slvfe.f
