--- a/Makefile.am
+++ b/Makefile.am
@@ -10,21 +10,32 @@ EXTRA_DIST += tools/NAMD/*
 EXTRA_DIST += tools/gromacs/*
 EXTRA_DIST += vmdplugins/*.C vmdplugins/*.c vmdplugins/*.h vmdplugins/*.cxx vmdplugins/*.hxx vmdplugins/Makefile vmdplugins/LICENSE
 
+if USE_FFTW
+FFTFLAGS = -DFFTW
+FFTLIBS = -lfftw3
+endif
+
+if USE_MKL
+FFTFLAGS = -DMKL
+endif
+
 ermod_gromacs_SOURCES = $(ersources) vmdfio.c
 ermod_gromacs_CFLAGS = -DINSTALL_PLUGIN_PATH=\"$(pkglibexecdir)\"
-ermod_gromacs_LDADD = ermod_gromacs-enganal.$(OBJEXT) $(LAPACK_LIBS) $(BLAS_LIBS) $(MPILIBS) -ldl -lm
+ermod_gromacs_FCFLAGS = $(FFTFLAGS)
+ermod_gromacs_LDADD = ermod_gromacs-enganal.$(OBJEXT) $(LAPACK_LIBS) $(BLAS_LIBS) $(FFTLIBS) $(MPILIBS) -ldl -lm
 
 extra_flags = 
 
 # extra dependencies added
 ermod_gromacs-enganal.$(OBJEXT): enganal.f insertion.f setconf.f stranal.f param_eng
-	$(F77) $(AM_FFLAGS) $(FFLAGS) -DGROMACS -DVMDPLUGINS $(extra_flags) -c -o $@ $<
+	$(F77) $(AM_FFLAGS) $(FFLAGS) $(FFTFLAGS) -DGROMACS -DVMDPLUGINS $(extra_flags) -c -o $@ $<
 
 ermod_namd_SOURCES = $(ersources)
-ermod_namd_LDADD = ermod_namd-enganal.$(OBJEXT) $(LAPACK_LIBS) $(BLAS_LIBS) $(MPILIBS)
+ermod_namd_FCFLAGS = $(FFTFLAGS)
+ermod_namd_LDADD = ermod_namd-enganal.$(OBJEXT) $(LAPACK_LIBS) $(BLAS_LIBS) $(FFTLIBS) $(MPILIBS)
 
 ermod_namd-enganal.$(OBJEXT): enganal.f insertion.f setconf.f stranal.f param_eng
-	$(F77) $(AM_FFLAGS) $(FFLAGS) -DNAMD -c -o $@ $<
+	$(F77) $(AM_FFLAGS) $(FFLAGS) $(FFTFLAGS) -DNAMD -c -o $@ $<
 
 
 slvfe_SOURCES = slvfe.f
